[package]
name = "udp-streamify"
version = "0.1.1"
authors = ["nikos efthias <nikos@mugsoft.io>"]
edition = "2018"
license = "MIT"
description = "Client session support for udp for the benefits of framing support of udp"
[profile.dev]
  debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["net", "sync", "rt", "macros", "time"] }
